--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # User-specific files
 *.rsuser
 *.suo
-*.user
+# *.user
 *.userosscache
 *.sln.docstates
 
@@ -398,3 +398,6 @@ FodyWeavers.xsd
 
 # boost
 Common/boost/
+
+# test log
+Files/log.txt
