--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -150,6 +150,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DataStructure\RingBuffer.cpp" />
+    <ClCompile Include="Etc\Random.cpp" />
     <ClCompile Include="Log\Log.cpp" />
     <ClCompile Include="Network\Client.cpp" />
     <ClCompile Include="Network\Packet\Packet.cpp" />
@@ -157,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStructure\RingBuffer.h" />
+    <ClInclude Include="Etc\Random.h" />
     <ClInclude Include="Log\Log.h" />
     <ClInclude Include="Network\Client.h" />
     <ClInclude Include="Network\Packet\Packet.h" />
